4.5.0 (xxxx-xx-xx)
---------------------------
* added ArangoDatabase.create()
* added ArangoCollection.create() && .create(CollectionCreateOptions)
* added ArangoGraph.create(Collection<EdgeDefinition>) && .create(Collection<EdgeDefinition>, GraphCreateOptions)
* extracted interfaces for ArangoDB API
* fixed aquireHostList bug when using active failover
* added field AqlFunctionEntity.isDeterministic

v4.4.1 (2018-06-04)
---------------------------
* fixed concurrency bug in VST when using connectionTtl

v4.4.0 (2018-04-19)
---------------------------
* changed dependency com.arangodb:velocypack to 1.1.0
  * fixed DateUtil does incorrect conversion of UTC time
  * serialize BigInteger/BigDecimal as String
* fixed reconnecting after ArangoDB restarts
* fixed ArangoCollection.updateDocuments() ignoring DocumentUpdateOptions.serializeNull

v4.3.7 (2018-04-17)
---------------------------
* fixed property loading
* fixed compatibility for ArangoDatabase.getAqlFunctions() for ArangoDB 3.4

v4.3.6 (2018-04-16)
---------------------------
* added ArangoDBAsync.Builder.maxConnectionTtl(Integer)

v4.3.4 (2018-03-21)
---------------------------
* fixed serialization of bind parameter with null values
* made ErrorEntity serializable
* fixed VelocyStream multi-thread authentication bug
* fixed load balancing cursor stickiness bug

v4.3.3 (2018-02-01)
---------------------------
* added CollectionCreateOptions.distributeShardsLike(String) (Issue #170)
* added AqlQueryOptions.memoryLimit(Long)
* added AqlQueryOptions.failOnWarning(Boolean)
* added AqlQueryOptions.maxTransactionSize(Long)
* added AqlQueryOptions.maxWarningCount(Long)
* added AqlQueryOptions.intermediateCommitCount(Long)
* added AqlQueryOptions.intermediateCommitSize(Long)
* added AqlQueryOptions.satelliteSyncWait(Double)
* added AqlQueryOptions.skipInaccessibleCollections(Boolean)
* added TransactionOptions.maxTransactionSize(Long)
* added TransactionOptions.intermediateCommitCount(Long)