@@ -5,6 +5,7 @@
 * added ArangoGraph.create(Collection<EdgeDefinition>) && .create(Collection<EdgeDefinition>, GraphCreateOptions)
 * extracted interfaces for ArangoDB API
 * fixed aquireHostList bug when using active failover
+* added return type for ArangoDatabase.deleteAqlFunction()
 * added field AqlFunctionEntity.isDeterministic
 
 v4.4.1 (2018-06-04)
